--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,6 +1,6 @@
 services:
   shared_mysql:
-    container_name: codely-java_ddd_example-mysql
+    container_name: purchase-center-mysql
     image: mysql:8
     platform: linux/amd64
     ports:
@@ -8,11 +8,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-    entrypoint:
-      sh -c "
-        echo 'CREATE DATABASE IF NOT EXISTS mooc;CREATE DATABASE IF NOT EXISTS backoffice;' > /docker-entrypoint-initdb.d/init.sql;
-        /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-      "
     command: ["--default-authentication-plugin=mysql_native_password"]
 
   shared_rabbitmq:
@@ -24,30 +19,5 @@ services:
       - "5630:5672"
       - "8090:15672"
     environment:
-      - RABBITMQ_DEFAULT_USER=codely
-      - RABBITMQ_DEFAULT_PASS=c0d3ly
-
-  backoffice_elasticsearch:
-    container_name: codely-java_ddd_example-elasticsearch
-    image: 'elasticsearch:6.8.4'
-    platform: linux/amd64
-    restart: unless-stopped
-    ports:
-      - "9300:9300"
-      - "9200:9200"
-    environment:
-      - discovery.type=single-node
-
-  test_server_java:
-    container_name: codely-java_ddd_example-test_server
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    volumes:
-      - .:/app:delegated
-    depends_on:
-      - shared_mysql
-      - shared_rabbitmq
-      - backoffice_elasticsearch
-    tty: true
+      - RABBITMQ_DEFAULT_USER=pfragatina
+      - RABBITMQ_DEFAULT_PASS=pfr4g4t1n4
