añadir los casos de uso crear, buscar y buscar por nombre de una inscripcion

--- a/apps/main/resources/.env
+++ b/apps/main/resources/.env
@@ -1,12 +1,12 @@
-#         PURCHASE-CENTER        #
+#            BACKOFFCE           #
 #--------------------------------#
 BACKEND_SERVER_PORT=8030
 # MySql
-MOOC_DATABASE_HOST=locahost
-MOOC_DATABASE_PORT=3306
-MOOC_DATABASE_NAME=org_pfragatina_purchase_center
-MOOC_DATABASE_USER=root
-MOOC_DATABASE_PASSWORD=
+BACKOFFICE_DATABASE_HOST=localhost
+BACKOFFICE_DATABASE_PORT=3308
+BACKOFFICE_DATABASE_NAME=backoffice
+BACKOFFICE_DATABASE_USER=root
+BACKOFFICE_DATABASE_PASSWORD=pfr4g4t1n4
 
 #             COMMON             #
 #--------------------------------#
