--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,17 +1,17 @@
 services:
   shared_mysql:
-    container_name: purchase-center-mysql
+    container_name: pfragatina-mysql
     image: mysql:8
     platform: linux/amd64
     ports:
-      - "3306:3306"
+      - "3308:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-    command: ["--default-authentication-plugin=mysql_native_password"]
+      - MYSQL_ROOT_PASSWORD=pfr4g4t1n4
+    volumes:
+      - ./docker/mysql/conf.d:/etc/mysql/conf.d
 
   shared_rabbitmq:
-    container_name: codely-java_ddd_example-rabbitmq
+    container_name: pfragatina-rabbitmq
     image: 'rabbitmq:3.7-management'
     platform: linux/amd64
     restart: unless-stopped
