crear tests de infraestrucutra

--- a/apps/main/resources/.env
+++ b/apps/main/resources/.env
@@ -11,8 +11,8 @@ BACKOFFICE_DATABASE_PASSWORD=pfr4g4t1n4
 #             COMMON             #
 #--------------------------------#
 # RabbitMQ
-RABBITMQ_HOST=locahost
-RABBITMQ_PORT=5672
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5630
 RABBITMQ_LOGIN=pfragatina
 RABBITMQ_PASSWORD=pfr4g4t1n4
 RABBITMQ_EXCHANGE=domain_events
