--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -21,3 +21,17 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=pfragatina
       - RABBITMQ_DEFAULT_PASS=pfr4g4t1n4
+  test_server_java:
+    container_name: pfragatina-purchase-center-test-server
+    build:
+        context: .
+        dockerfile: Dockerfile
+    restart: unless-stopped
+    env_file:
+      - apps/main/resources/.env.ci
+    volumes:
+      - .:/app:delegate
+    depends_on:
+      - shared_mysql
+      - shared_rabbitmq
+    tty: true
