--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
               echo "Waiting for database connection..."
               sleep 2
           done
-
-      - name: wrapper gradle
-        run: make wrapper
+          
+      - name: 🔍 Debug Gradle Wrapper
+        run: docker exec pfragatina-purchase-center-test-server ls -l /app
 
       - name: 🔦 Lint
         run: make lint
