--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           done
           
       - name: 🔍 Debug Gradle Wrapper
-        run: docker exec pfragatina-purchase-center-test-server ls -l /app
+        run: docker exec pfragatina-purchase-center-test-server ls -l /app/gradle/wrapper
 
       - name: 🔦 Lint
         run: make lint
