--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,8 +7,11 @@ services:
       - "3308:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=pfr4g4t1n4
-    volumes:
-      - ./docker/mysql/conf.d:/etc/mysql/conf.d
+    entrypoint:
+      sh -c "
+      echo 'CREATE DATABASE IF NOT EXISTS backoffice' > /docker-entrypoint-initdb.d/init.sql;
+      /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      "
 
   shared_rabbitmq:
     container_name: pfragatina-rabbitmq
@@ -21,6 +24,7 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=pfragatina
       - RABBITMQ_DEFAULT_PASS=pfr4g4t1n4
+
   test_server_java:
     container_name: pfragatina-purchase-center-test-server
     build:
